# sqlite-hashes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  justfile  release-plz.toml
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml  dependabot.yml
benches/: bench.rs
src/: aggregate.rs  blake3.rs  core.rs  fnv.rs  lib.rs  md5.rs  scalar.rs  sha1.rs  sha224.rs  sha256.rs  sha384.rs  sha512.rs  state.rs  xxhash.rs
src/cdylib/: cdylib.rs
tests/: _utils.rs  aggregate.rs  scalar.rs  test-ext.sh  tests.rs  window.rs
