[package]
name = "sqlite-hashes"
version = "0.5.0"  # This value is also used in the README.md
description = "Hashing functions for SQLite with aggregation support: MD5, SHA1, SHA256, SHA512"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/sqlite-hashes"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["sqlite", "rusqlite", "hash", "md5", "sha256"]
categories = ["database", "cryptography"]
rust-version = "1.60.0"

[features]
default = ["trace", "aggregate", "window", "hex", "md5", "sha1", "sha224", "sha256", "sha384", "sha512"]
#
# Enable Trace Logging
trace = ["dep:hex", "dep:log"]
# Enable HEX-outputing variants like *_hex() and *_concat_hex() (with "aggregate" feature)
hex = ["dep:hex"]
# Enable aggregate functions
aggregate = []
# Enable window functions in addition to aggregate functions (uses bundled SQLite)
window = ["aggregate", "rusqlite/bundled", "rusqlite/window"]
#
# Hashing algorithms
md5 = ["dep:md-5"]
sha1 = ["dep:sha1"]
sha224 = ["dep:sha2"]
sha256 = ["dep:sha2"]
sha384 = ["dep:sha2"]
sha512 = ["dep:sha2"]

[dependencies]
hex = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
rusqlite = { version = "0.29.0", features = ["functions"] }

# Digest and all hashing algorithms are using the same crates internally, so should be kept in sync
digest = "0.10.7"
md-5 = { version = "0.10.6", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }
ctor = "0.2"
env_logger = "0.10"
insta = { version = "1", features = [] }
